# Assignment3

./: .dockerignore  .env.template  .gitignore  README.md  airflow.Dockerfile  app.py  backend.Dockerfile  docker-compose-airflow.yml  docker-compose-app.yaml  pyproject.toml
Airflow/: docker-compose-airflow.yaml
Airflow/dags/: __init__.py  articles_data.json  pdf_img_downloader.py  pipeline.py  updated_articles_data.json  upload_img_pdf.py
Airflow/dags/database/: articles.py
architecture/: generate_diagrams.py  v1.drawio
backend/: config.py  main.py  test.py
backend/database/: __init__.py  articles.py  init_db.py  qa.py  research_notes.py  summary.py  users.py
backend/schemas/: __init__.py  articles.py  auth.py  qa.py  users.py
backend/services/: articles.py  auth.py  auth_bearer.py  chat.py  qa.py  rag.py  summary_generation.py  users.py
backend/utilities/: base_utils.py  document_processors.py
backend/utils/: base_utils.py  document_processors.py  nvidia_utils.py
backend/views/: __init__.py  articles.py  auth.py  chat.py  qa.py  users.py
dags/: articles.py  pdf_downloader.py  pdf_img_downloader.py  pipeline.py  updated_articles_data.json  upload_img_pdf.py
dags/data_indexer/: document_processors.py  pdf_indexer.py  utils.py
dags/data_ingestion/: scraper.py  uploader.py  utils.py
frontend/pages/: chat.py  document_viewer.py  list_docs.py  reports.py  summary_generation.py  user_creation.py  user_login.py
frontend/utils/: api_utils.py  auth.py  chat.py
vectorstore/table_references/: table1-page16.xlsx  table1-page17.xlsx  table1-page39.xlsx  table1-page42.xlsx  table1-page43.xlsx  table1-page45.xlsx  table1-page47.xlsx  table1-page48.xlsx  table1-page51.xlsx  table1-page52.xlsx  table1-page76.xlsx  table1-page77.xlsx
