[tool.poetry]
name = "assignment3"
version = "0.1.0"
description = ""
authors = ["Gopi Krishna <gopigof@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
streamlit = "^1.39.0"
snowflake-connector-python = "^3.12.2"
pydantic-settings = "^2.6.0"
streamlit-extras = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
