[tool.poetry]
name = "assignment3"
version = "0.1.0"
description = ""
authors = ["Gopi Krishna <gopigof@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
streamlit = "^1.39.0"
snowflake-connector-python = "^3.12.2"
pydantic-settings = "^2.6.0"
numpy = "1.26.4"
llama-index-llms-openai = "^0.2.16"
llama-index-embeddings-openai = "^0.2.5"
pypdf2 = "^3.0.1"
llama-parse = "^0.5.12"
boto3 = "^1.35.51"
bs4 = "^0.0.2"
requests = "^2.32.3"
selenium = "^4.25.0"
webdriver-manager = "^4.0.2"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
