[tool.poetry]
name = "assignment3"
version = "0.1.0"
description = ""
authors = ["Gopi Krishna <gopigof@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
streamlit = "^1.39.0"
snowflake-connector-python = "^3.12.2"
pydantic-settings = "^2.6.0"
snowflake-sqlalchemy = "^1.6.1"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
uvicorn = "^0.32.0"
python-dotenv = "^1.0.1"
boto3 = "^1.35.48"
pymilvus = "^2.4.8"
passlib = "^1.7.4"
bcrypt = "^4.2.0"
python-jose = "^3.3.0"
openai = "^1.52.2"
pymupdf = "^1.24.13"
llama-index = "^0.11.20"
streamlit-extras = "^0.5.0"
llama-index-vector-stores-milvus = "^0.2.7"
llama-index-readers-file = "^0.2.2"
llama-index-llms-nvidia = "^0.2.6"
llama-index-embeddings-nvidia = "^0.2.4"
python-pptx = "^1.0.2"
diagrams = "^0.23.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
